<resources>
    <string name="app_name">ExamenPabloSerranoGarcia</string>
    <string name="titulo">Visita al zoo</string>
    <string name="txt_Dia">Elige el día: </string>
    <string name="cantidadEntradas">Cantidad de entradas</string>
    <string name="entradasDisponibles">Entradas disponibles: </string>
    <string name="calcularPrecio">CALCULAR PRECIOS</string>
    <string name="txt_PrecioEntradas">Precio entradas:</string>
    <string name="txt_Descuento">Descuento aplicado :</string>
    <string name="txtTotal">Total:</string>
    <string name="btPago">Ir a pago</string>
    <string name="tituloPagos">PAGO</string>
    <string name="TotalPagos">Total: </string>
    <string name="ComisionPagos">Comisión: </string>
    <string name="TotalPagarPagos">Total a pagar: </string>
    <string name="btPagar">Pagar</string>
    <string name="tarjeta">Pago con tarjeta</string>
    <string name="paypal">Pago con paypal</string>
    <string name="todo">TODO</string>
</resources>